--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -21,14 +21,15 @@
                 {% endblock %}
 
                 {% block sw_text_editor_box_content %}
-                    <div class="sw-text-editor__content" :style="placeholderHeight">
+                    <div class="sw-text-editor__content">
                         <div class="sw-text-editor__content-editor"
                              ref="editor"
                              :contenteditable="true"
                              spellcheck="false"
                              @focus="onFocus"
                              @paste="onPaste"
-                             @blur="onContentChange"
+                             @blur="emitContent"
+                             @input="onContentChange"
                              tabindex="-1"
                              v-html="$sanitize(content)">
                         </div>
