--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.scss
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.scss
@@ -33,9 +33,19 @@
             }
         }
 
+        .sw-text-editor__content-placeholder {
+            padding: 20px;
+        }
+
         .sw-text-editor__word_count {
             border-top: 1px solid $color-steam-cloud;
             padding: 5px 10px 5px 5px;
+        }
+    }
+
+    &.is--empty {
+        .sw-text-editor__content-editor {
+            min-height: 100px;
         }
     }
 
@@ -46,11 +56,14 @@
     }
 
     .sw-text-editor__content-placeholder {
+        width: 100%;
+        height: 100%;
         position: absolute;
         top: 0;
-        width: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
         pointer-events: none;
-        padding: 20px;
         color: darken($color-light-gray, 20%);
 
         > * {
