NEXT-3129 - Update sw-label component & module occurrences

--- a/Resources/administration/src/app/component/base/sw-label/sw-label.html.twig
+++ b/Resources/administration/src/app/component/base/sw-label/sw-label.html.twig
@@ -1,7 +1,6 @@
 {% block sw_label %}
-    <span class="sw-label"
-          :class="labelClasses"
-          @click.stop="$emit('selected')">
+    <span class="sw-label" :class="labelClasses" @click.stop="$emit('selected')">
+
         {% block sw_label_text_holder %}
             <slot>{% block sw_label_slot_default %}{% endblock %}</slot>
         {% endblock %}
@@ -11,12 +10,13 @@
                     class="sw-label__dismiss"
                     :title="$tc('global.sw-label.buttonDismiss')"
                     @click.prevent.stop="$emit('dismiss')">
+
                 {% block sw_select_selection_dismiss_icon %}
                     <slot name="dismiss-icon">
-                        <sw-icon name="small-default-x-line-medium">
-                        </sw-icon>
+                        <sw-icon name="small-default-x-line-medium" :small="small ? true : null"></sw-icon>
                     </slot>
                 {% endblock %}
+
             </button>
         {% endblock %}
     </span>
