--- a/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
@@ -32,6 +32,7 @@
                                 :data-id="selection.id">
                                 {% block sw_select_selection_item %}
                                     <sw-label dismissAble
+                                              :small="size === 'small' ? 'small' : null"
                                               @selected="changeDefaultItemId(selection.id)"
                                               @dismiss="onDismissSelection(selection[itemValueKey])">
                                         <template>
