--- a/Resources/administration/src/app/component/form/sw-switch-field/sw-switch-field.scss
+++ b/Resources/administration/src/app/component/form/sw-switch-field/sw-switch-field.scss
@@ -41,6 +41,7 @@ $sw-field--switch-color-inherit: $color-purple;
     .sw-field--switch__label {
         margin: 0;
         font-size: 14px;
+        line-height: 22px;
     }
 
     .sw-field--switch__input {
