--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item/sw-condition-line-item.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item/sw-condition-line-item.html.twig
@@ -6,6 +6,7 @@
     {% endblock %}
     {% block sw_condition_line_item_field_identifier %}
         <sw-condition-value multi
+                            size="small"
                             name="identifiers"
                             :id="condition.id"
                             :store="getProductStore()"
