--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -67,6 +67,7 @@
                         {% block sw_settings_rule_detail_content_card_field_type %}
                             <sw-condition-value v-if="moduleTypes"
                                                 multi
+                                                size="small"
                                                 id="ruleType"
                                                 :label="$tc('sw-settings-rule.detail.labelType')"
                                                 :store="moduleTypeStore"
