--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-currency/sw-condition-currency.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-currency/sw-condition-currency.html.twig
@@ -7,6 +7,7 @@
     {% block sw_condition_currency_field_currency_ids %}
         <sw-condition-value :id="condition.id"
                             multi
+                            size="small"
                             name="currencyIds"
                             :store="getCurrencyStore()"
                             class="field--main"
