--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-tag/sw-condition-line-item-tag.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-tag/sw-condition-line-item-tag.html.twig
@@ -6,6 +6,7 @@
     {% endblock %}
     {% block sw_condition_line_item_tag_field_identifiers %}
         <sw-condition-value multi
+                            size="small"
                             :id="condition.id"
                             name="identifiers"
                             :store="getTagStore()"
