--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-items-in-cart/sw-condition-line-items-in-cart.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-items-in-cart/sw-condition-line-items-in-cart.html.twig
@@ -6,6 +6,7 @@
     {% endblock %}
     {% block sw_condition_line_items_in_cart_field_identifiers %}
         <sw-condition-value multi
+                            size="small"
                             name="identifiers"
                             :id="condition.id"
                             :store="getProductStore()"
