--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
@@ -6,6 +6,7 @@
     {% endblock %}
     {% block sw_condition_sales_channel_field_sales_channel_ids %}
         <sw-condition-value multi
+                            size="small"
                             name="salesChannelIds"
                             :id="condition.id"
                             :store="getSalesChannelStore()"
