NTR - Add forgotten identifier to newsletter receiver grid

--- a/Resources/administration/src/module/sw-newsletter-receiver/page/sw-newsletter-receiver-list/sw-newsletter-receiver-list.twig
+++ b/Resources/administration/src/module/sw-newsletter-receiver/page/sw-newsletter-receiver-list/sw-newsletter-receiver-list.twig
@@ -30,6 +30,7 @@
                     {% block sw_newsletter_receiverlist_list_grid %}
                         <sw-entity-listing slot="grid"
                                            ref="swNewsletterReceiverGrid"
+                                           identifier="sw-newsletter-receiver"
                                            v-if="items"
                                            :showSelection="false"
                                            class="sw-newsletter-receiver-list-grid"
