NEXT-3092 - Fix media sort/presentation

--- a/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.scss
+++ b/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.scss
@@ -45,6 +45,7 @@ $sw-select-field-color-error: $color-crimson;
         option {
             color: $sw-select-field-color-text;
             background-color: $sw-select-field-color-background;
+            padding-right: 22px;
         }
 
         option:disabled {
