NEXT-3140 - Resolve category product loading issue

--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -72,7 +72,8 @@
             <template slot="content">
 
                 {% block sw_category_content_view %}
-                    <sw-category-view v-if="category"
+                    <sw-category-view
+                        v-if="category"
                         ref="categoryView"
                         :category="category"
                         :cmsPage="cmsPage"
