--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -31,6 +31,7 @@
 
         {% block sw_category_view_content %}
             <router-view
+                ref="categoryRouterView"
                 :category="category"
                 :cmsPage="cmsPage"
                 :mediaItem="mediaItem"
