Fix checkbox margins after new styling

--- a/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.scss
+++ b/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.scss
@@ -70,6 +70,10 @@ $sw-grid-column-color-link: $color-shopware-blue;
                 text-decoration: underline;
             }
         }
+
+        .sw-field--checkbox {
+            margin-bottom: 0;
+        }
     }
 
     &.sw-grid-column--left {
