NEXT-3129 - Added CR fixes

--- a/Resources/administration/src/app/component/base/sw-label/sw-label.html.twig
+++ b/Resources/administration/src/app/component/base/sw-label/sw-label.html.twig
@@ -13,7 +13,7 @@
 
                 {% block sw_select_selection_dismiss_icon %}
                     <slot name="dismiss-icon">
-                        <sw-icon name="small-default-x-line-medium" :small="small ? true : null"></sw-icon>
+                        <sw-icon name="small-default-x-line-medium" :small="small"></sw-icon>
                     </slot>
                 {% endblock %}
 
