NTR - Fix dashboard styling

--- a/Resources/administration/src/module/sw-dashboard/component/sw-dashboard-external-link/sw-dashboard-external-link.scss
+++ b/Resources/administration/src/module/sw-dashboard/component/sw-dashboard-external-link/sw-dashboard-external-link.scss
@@ -2,9 +2,10 @@
 
 .sw-dashboard-external-link {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     color: $color-shopware-blue;
     text-decoration: none;
+    font-size: 18px;
 }
 
 .sw-dashboard-external-link:hover {
