--- a/Resources/administration/src/module/sw-dashboard/page/sw-dashboard-index/sw-dashboard-index.scss
+++ b/Resources/administration/src/module/sw-dashboard/page/sw-dashboard-index/sw-dashboard-index.scss
@@ -21,10 +21,14 @@
       grid-column-start: 1;
       grid-column-end: 3;
 
+      .sw-card__content {
+        padding: 56px;
+      }
+
       .sw-dashboard__welcome-content {
         display: flex;
         height: 100%;
-        width: 738px;
+        width: 686px;
 
         .sw-dashboard__welcome-content-left {
           flex: 1;
@@ -40,11 +44,20 @@
           }
 
           .sw-dashboard__welcome-text {
-            margin-top: 30px;
+            margin-top: 24px;
+            line-height: 22px;
+            font-size: 14px;
+          }
+
+          .sw-dashboard__welcome-subText {
+            line-height: 22px;
+            font-size: 14px;
           }
 
           .sw-dashboard__welcome-subSubText {
-            margin-bottom: 40px;
+            margin-bottom: 32px;
+            line-height: 22px;
+            font-size: 14px;
           }
 
           .sw-dashboard__issueTrackerButton {
@@ -60,6 +73,10 @@
     .sw-dashboard__paypal {
       text-align: center;
 
+      .sw-button {
+        width: 100%;
+      }
+
       .sw-dashboard__paypal-icon {
         display: block;
         height: 145px;
@@ -71,6 +88,7 @@
 
       .sw-card__content {
         height: 100%;
+        padding: 40px;
       }
 
       .sw-dashboard-card-headline {
@@ -78,7 +96,7 @@
       }
 
       .sw-dashboard__documentation-link {
-        margin-top: 35px;
+        margin-top: 16px;
       }
     }
 
@@ -87,23 +105,25 @@
       grid-column-end: 3;
 
       .sw-card__content {
+        padding: 40px;
         padding-right: 0;
         padding-bottom: 0;
       }
 
       .sw-dashboard__migration-content {
         display: flex;
-        height: 375px;
 
         .sw-dashboard__migration-content-left {
           flex: 1;
 
           .sw-dashboard__migration-content-description {
-            margin-top: 40px;
-            margin-bottom: 40px;
+            margin-top: 24px;
+            margin-bottom: 24px;
+            line-height: 22px;
+            font-size: 14px;
           }
           .sw-button {
-            margin-top: 40px;
+            margin-top: 14px;
           }
         }
         .sw-dashboard__migration-content-right {
