NEXT-3212 - Fix switch styles

--- a/Resources/administration/src/app/component/form/sw-switch-field/sw-switch-field.scss
+++ b/Resources/administration/src/app/component/form/sw-switch-field/sw-switch-field.scss
@@ -8,6 +8,7 @@ $sw-field--switch-color-error: $color-crimson;
 $sw-field--switch-color-inherit: $color-purple;
 
 .sw-field--switch {
+    margin-top: 24px;
     margin-bottom: 22px;
 
     .sw-field {
