--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -1,6 +1,6 @@
 {% block sw_product_basic_form %}
     <div class="product-basic-form">
-        <sw-container columns="1fr 300px" gap="0px 30px" align="end">
+        <sw-container columns="1fr 300px" gap="0px 30px">
             {% block sw_product_basic_form_title_field %}
                 <sw-field type="text"
                           :label="$tc('sw-product.basicForm.labelTitle')"
