--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -164,11 +164,10 @@
                                     <sw-field type="switch"
                                               bordered
                                               disabled
+                                              :helpText="$tc('sw-settings-language.detail.helpTextDefaultField')"
                                               :label="$tc('sw-settings-language.detail.labelDefault')"
                                               v-model="language.active">
                                     </sw-field>
-                                    <sw-help-text :text="$tc('sw-settings-language.detail.helpTextDefaultField')">
-                                    </sw-help-text>
                                 </div>
                             {% endblock %}
                         </sw-container>
